force-app/main/default/objects/Passenger__c/fields/Flight_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Flight_Bookings__c</fullName>
    <label>Flight Bookings</label>
    <referenceTo>Flight_Bookings__c</referenceTo>
    <relationshipLabel>Passengers</relationshipLabel>
    <relationshipName>Passengers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>