force-app/main/default/objects/Passenger__c/fields/ID_Card__c.field-meta.xml
<CustomField>
    <fullName>ID_Card__c</fullName>
    <label>ID Card</label>
    <length>9</length>
    <type>Text</type>
</CustomField>