force-app/main/default/objects/Passenger__c/fields/Passenger_number__c.field-meta.xml
<CustomField>
    <fullName>Passenger_number__c</fullName>
    <displayFormat>P-{00}</displayFormat>
    <label>Passenger number</label>
    <type>AutoNumber</type>
</CustomField>